--- a/index.html
+++ b/index.html
@@ -10,28 +10,15 @@
   <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
   <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+
+  <!-- Babel compiler, only use this for testing JSX, this is super slow and not suitable for production -->
+  <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 </head>
 
 <body>
   <div id="root"></div>
-  <div id="root2"></div>
 
-  <!-- Add the following -->
-
-  <div>
-    <p>Message 1</p>
-    <span class="button" data-message-id="1"></span>
-  </div>
-  <div>
-    <p>Message 2</p>
-    <span class="button" data-message-id="2"></span>
-  </div>
-  <div>
-    <p>Message 3</p>
-    <span class="button" data-message-id="3"></span>
-  </div>
-
-  <script src="script.js"></script>
+  <script type="text/babel" src="script.js"></script>
 </body>
 
 </html>
